--- a/data/000.info.md
+++ b/data/000.info.md
@@ -1316,3 +1316,99 @@ function MyComponent() {
 In this scenario, as long as the Cloudflare Worker at `https://your-cloudflare-worker.your-domain.workers.dev` is configured with the appropriate CORS headers to allow requests from the domain where the React app is hosted, the `fetch` request will succeed, and the data will be available to the `MyComponent`.
 
 In conclusion, the ability for a React application using Tanstack Router to access a Cloudflare Worker on another domain is a standard practice in modern web development. The key lies in the server-side configuration of the Cloudflare Worker to handle CORS, thereby enabling secure and reliable cross-origin communication.
+
+
+To use the AUTOMATIC1111 Stable Diffusion API with ControlNet enabled, set to low VRAM, and including an image, you will need to send a POST request to the `/sdapi/v1/txt2img` endpoint. The body of the request will be a JSON payload containing your desired parameters.
+
+Here is a breakdown of what the web request would look like in Postman:
+
+### **1. Request URL**
+
+The endpoint for text-to-image generation is:
+
+```
+http://127.0.0.1:7860/sdapi/v1/txt2img
+```
+
+**Note:** Your address and port might be different if you have a custom configuration.
+
+### **2. HTTP Method**
+
+You will need to use the `POST` method for this request.
+
+### **3. Headers**
+
+Set the following header:
+
+*   `Content-Type`: `application/json`
+
+### **4. Request Body**
+
+The body of the request will be a JSON object. The key to enabling and configuring ControlNet is the `alwayson_scripts` parameter.
+
+Here is an example of the JSON payload:
+
+```json
+{
+    "prompt": "a beautiful woman",
+    "negative_prompt": "ugly, tiling, poorly drawn hands, poorly drawn feet, poorly drawn face, out of frame, extra limbs, disfigured, deformed, body out of frame, bad anatomy, watermark, signature, cut off, low contrast, underexposed, overexposed, bad art, beginner, amateur, distorted face",
+    "steps": 20,
+    "sampler_index": "DPM++ 2M Karras",
+    "width": 512,
+    "height": 768,
+    "alwayson_scripts": {
+        "controlnet": {
+            "args": [
+                {
+                    "enabled": true,
+                    "lowvram": true,
+                    "input_image": "YOUR_BASE64_ENCODED_IMAGE_STRING",
+                    "module": "openpose",
+                    "model": "control_v11p_sd15_openpose [cab75096]",
+                    "weight": 1,
+                    "resize_mode": "Crop and Resize",
+                    "control_mode": "Balanced"
+                }
+            ]
+        }
+    }
+}
+```
+
+### **Breaking Down the ControlNet Arguments**
+
+The ControlNet configuration is passed within the `args` array inside the `controlnet` object. Each object in this array represents a ControlNet unit.
+
+*   **`enabled`**: Set this to `true` to activate the ControlNet unit.
+*   **`lowvram`**: Set this to `true` to enable the low VRAM mode for ControlNet. This can be beneficial if you have a GPU with less VRAM.
+*   **`input_image`**: This is where you will paste your base64 encoded image string. You can find online tools to convert an image to a base64 string.
+*   **`module`**: This specifies the preprocessor to be used, for example, "canny", "depth", or "openpose".
+*   **`model`**: This is the name of the ControlNet model you want to use. You can get a list of your available models via the `/controlnet/model_list` API endpoint.
+*   **`weight`**: This determines the influence of the ControlNet on the final image.
+*   **`resize_mode`**: This specifies how to handle the input image if its dimensions differ from the output resolution.
+*   **`control_mode`**: This allows you to balance the influence between your prompt and the ControlNet input, with options like "Balanced", "My prompt is more important", and "ControlNet is more important".
+
+### **How to Get the Base64 Encoded Image**
+
+You can use various online tools or write a simple script to convert your image file into a base64 string. For example, in Python, you could use the following:
+
+```python
+import base64
+
+with open("your_image.png", "rb") as image_file:
+    encoded_string = base64.b64encode(image_file.read()).decode('utf-8')
+print(encoded_string)
+```
+
+Once you have the encoded string, you will replace `"YOUR_BASE64_ENCODED_IMAGE_STRING"` in the JSON payload with it.
+
+### **Testing in Postman**
+
+1.  Open Postman and create a new request.
+2.  Set the method to `POST` and enter the request URL.
+3.  Go to the "Headers" tab and add the `Content-Type` header.
+4.  Go to the "Body" tab, select "raw", and choose "JSON" from the dropdown.
+5.  Paste the JSON payload into the text area, making sure to replace the placeholder for the base64 image string.
+6.  Click "Send" to execute the request.
+
+If the request is successful, you will receive a response containing the generated image(s) also in base64 format, along with information about the generation parameters.
