--- a/data/000.info.md
+++ b/data/000.info.md
@@ -1412,3 +1412,126 @@ Once you have the encoded string, you will replace `"YOUR_BASE64_ENCODED_IMAGE_S
 6.  Click "Send" to execute the request.
 
 If the request is successful, you will receive a response containing the generated image(s) also in base64 format, along with information about the generation parameters.
+
+Of course. In the Astro framework, you can make web requests on the server and use the fetched data to dynamically populate your HTML. This is a core feature that allows you to build data-driven websites. Here's a comprehensive guide on how to achieve this.
+
+### Making Server-Side Web Requests in Astro
+
+In Astro, server-side code, including data fetching, is written in the component's "frontmatter" script. This is the code that lives between the two `---` code fences at the top of your `.astro` files.
+
+You can use the globally available `fetch()` API to make HTTP requests to any URL.
+
+Here's a step-by-step guide:
+
+#### 1. Fetch Data in the Component Script
+
+Within the frontmatter of your `.astro` component, you can use `await fetch()` to retrieve data from an external API or endpoint.
+
+```astro
+---
+// src/pages/posts.astro
+const response = await fetch('https://jsonplaceholder.typicode.com/posts');
+const posts = await response.json();
+---
+```
+
+Astro supports top-level `await` in the frontmatter, which simplifies the process of handling asynchronous operations like fetching data.
+
+#### 2. Populate the HTML with Fetched Data
+
+The data you fetch in the frontmatter is then available to be used directly in the component's template (the HTML portion). You can use JavaScript expressions and template directives to render dynamic content.
+
+For instance, you can iterate over the `posts` array fetched in the previous step and render a list of blog posts:
+
+```astro
+---
+// src/pages/posts.astro
+const response = await fetch('https://jsonplaceholder.typicode.com/posts');
+const posts = await response.json();
+---
+
+<h1>Blog Posts</h1>
+<ul>
+  {posts.map(post => (
+    <li>
+      <h2>{post.title}</h2>
+      <p>{post.body}</p>
+    </li>
+  ))}
+</ul>
+```
+
+### Build-time vs. Runtime Data Fetching
+
+It's important to understand when your data is fetched in Astro. There are two primary modes:
+
+*   **Static Site Generation (SSG) (Default):** In this mode, the data is fetched at **build time**. This means that when you build your site for deployment, Astro will fetch the data once and generate static HTML files. This is great for content that doesn't change frequently.
+
+*   **Server-Side Rendering (SSR):** If you need to fetch fresh data for each request, you can enable SSR. With SSR, the `fetch()` call will be executed at **runtime** on the server for every user visit.
+
+To enable SSR, you need to update your `astro.config.mjs` file:
+
+```javascript
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  output: 'server'
+});
+```
+
+By setting the `output` option to `'server'`, you instruct Astro to render pages on demand.
+
+### Complete Example: Displaying a List of Users
+
+Here is a complete example of an Astro page that fetches a list of users from an API and displays them.
+
+**`src/pages/users.astro`**
+
+```astro
+---
+// 1. Fetch data from an API on the server
+const response = await fetch('https://jsonplaceholder.typicode.com/users');
+const users = await response.json();
+---
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Users</title>
+</head>
+<body>
+  <h1>Our Users</h1>
+  <div class="user-grid">
+    {/* 2. Use the fetched data to populate the HTML */}
+    {users.map(user => (
+      <div class="card">
+        <h2>{user.name}</h2>
+        <p><strong>Email:</strong> {user.email}</p>
+        <p><strong>Website:</strong> {user.website}</p>
+      </div>
+    ))}
+  </div>
+
+  <style>
+    .user-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 1rem;
+    }
+    .card {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 1rem;
+    }
+  </style>
+</body>
+</html>
+```
+
+In this example:
+1.  The code inside the `---` frontmatter is executed on the server.
+2.  It fetches a list of users from the JSONPlaceholder API.
+3.  The returned JSON is parsed and stored in the `users` variable.
+4.  In the HTML template, the `users.map()` function is used to loop through the array and render a `div` for each user, dynamically populating it with their name, email, and website.
