--- a/data/000.info.md
+++ b/data/000.info.md
@@ -1,3 +1,51 @@
+
+Determining the "best" virtual tabletop (VTT) depends on your needs, such as your budget, technical skill, and desired features. While Foundry Virtual Tabletop is often hailed as the best overall for its features and one-time purchase model, other platforms excel in different areas. 
+
+Top virtual tabletops compared
+
+For advanced users: Foundry VTT
+Foundry is highly regarded as the most advanced and customizable VTT available, offering a powerful one-time purchase model for the Dungeon Master (GM). 
+Cost: One-time purchase of around $50 for the GM; players can join for free.
+Pros: Offers a high degree of control with extensive user-created modules, dynamic lighting, custom animations, and automated features. The self-hosted server gives you complete ownership of your data.
+Cons: Has a steeper learning curve and a more involved setup process than other options. Requires the GM to either host the game on their own computer or pay for an external server. 
+
+For beginners and ease of use: Owlbear Rodeo
+This browser-based VTT is an excellent choice for newcomers due to its simplicity and zero-setup approach. 
+Cost: Free to use, with a Patreon for optional support.
+Pros: Incredibly easy to start playing—just share a link. All content is saved in your browser, and no accounts are required for players.
+Cons: Lacks advanced features like integrated voice chat, automated character sheets, and content libraries. You will likely need a separate voice app like Discord. 
+
+For a strong official content library: Roll20
+As one of the oldest VTTs, Roll20 is widely used and offers a massive library of official content for games like Dungeons & Dragons. 
+Cost: A free-to-play version with subscription tiers for more features and storage.
+Pros: The most established platform with a large community and extensive marketplace for official rulebooks and adventures. No installation is required.
+Cons: The interface can be clunky, buggy, and frustrating to use compared to modern VTTs. Dynamic lighting is locked behind a subscription. 
+
+For robust automation and official content: Fantasy Grounds Unity
+This desktop application is known for its strong ruleset automation, which significantly speeds up gameplay by handling many of the dice rolls and calculations. 
+Cost: A one-time purchase for the "Ultimate" license ($149) lets anyone play for free, while the "Standard" license ($30) requires all players to own one. Subscriptions are also available.
+Pros: Offers the most official licenses and has been praised by many in the community, including popular TTRPG personalities.
+Cons: The user interface has a steeper learning curve than browser-based VTTs and is the most expensive option. 
+
+For 3D immersive gameplay: Talespire
+If stunning visuals and dynamic 3D environments are a priority, Talespire allows you to build intricate battle maps with a high level of detail. 
+Cost: A one-time purchase of $24.99.
+Pros: Creates a more immersive, video-game-like experience than other VTTs. Supports importing figures from popular services like HeroForge.
+Cons: Has less robust game management features than platforms like Foundry and Fantasy Grounds. 
+
+How to choose the right VTT for your group
+To decide on the best VTT, consider these questions:
+What is your group's budget? For a one-time purchase with the most long-term value, Foundry is the clear winner. For a free experience, start with Owlbear Rodeo or the free version of Roll20.
+What is your experience level? Beginners will find Owlbear Rodeo to be the most painless, while tech-savvy GMs who want full control will appreciate Foundry.
+
+What features are most important?
+Automation: If you want your system to handle most of the rule-heavy work, Fantasy Grounds and Foundry offer strong options.
+Immersion: For a cinematic, 3D experience, TaleSpire is the best option. For 2D ambiance with animated effects, Alchemy RPG is a good alternative.
+Content: If you want a quick and easy way to buy official rulebooks and adventure modules, Roll20 or Fantasy Grounds offer a large library.
+Flexibility: For the most system-agnostic customization and a thriving modding community, Foundry is unmatched. 
+
+
+
 Excellent question. Protected routes are the backbone of security for an online game, ensuring that only authenticated and authorized players can access sensitive data and perform critical actions. These routes are typically part of your game's backend API.
 
 Here is a categorized list of routes that are almost always protected, ranging from essential to advanced.
